--- a/.env.example.yml
+++ b/.env.example.yml
@@ -1,4 +1,7 @@
 # DB
+
+# Para executar o projeto, é necessário renomear esse arquivo para ".env.local.yml" e ter configurado um banco de dados postgresql, com o nome "apiplaces" comunicando na porta 5432.
+
 TYPEORM_HOST: localhost
 TYPEORM_USERNAME: postgres
 TYPEORM_PASSWORD: postgres
